Fix clickable .drawer-item when invisible

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -130,6 +130,7 @@ a {
 }
 
 #drawer {
+  overflow: hidden;
   position: fixed;
   bottom: 0;
   right: 0;
